--- a/securityhub_export.yml
+++ b/securityhub_export.yml
@@ -181,8 +181,13 @@ Resources:
                       # Other integrated product may have format that can cause problem
                       else:
                           product_name = item['resources'][0].split('/')[2]
-                          region = item['resources'][0].split('/')[3]
-                          account_id = item['resources'][0].split('/')[4]
+                          findings = item['detail']['findings'][0]
+                          #region = item['resources'][0].split('/')[3]
+                          if 'Region' in findings:
+                              region = findings['Region']
+                          #account_id = item['resources'][0].split('/')[4]
+                          if 'AwsAccountId' in findings:
+                              account_id = findings['AwsAccountId']
                       key = account_id + '/' + product_name + '/'+region
                       logger.info( f'key is {key}')
 
